--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -42,48 +42,57 @@
         <div class="row">
             <div class="sample headings">Measurements</div>
             <ul>
-                <li style="padding:10px;"><b>Composition</b> :
+                <li style="padding:10px;" ng-repeat="property in properties">
+                   <b>{{property.name}}</b> :
                     <div class="row">
                         <div class="col-xs-offset-1">
-                            Best Measure: <span style="padding-left: 5px;">Mg Al 5%  (SEM Imaging)</span>  <br>
-                            Measurements: <a ng-click="measurements()">link</a>
+                            Best Measure: <span style="padding-left: 5px;">{{}}</span>  <br>
+                            Measurements: <a ng-click="measurements(property)">link</a>
                         </div>
                     </div>
                 </li>
-                <li style="padding:10px;"><b>Volume Fraction</b> :
-                    <div class="row">
-                        <div class="col-xs-offset-1">
-                            Best Measure: <span style="padding-left: 5px;"> 44 Cubic cm (SEM Imaging)</span> <br>
-                            Measurements: <a ng-click="measurements()">link</a>
-                        </div>
-                    </div>
-                </li>
-                <li style="padding:10px;"><b>Height</b> :
-                    <div class="row">
-                        <div class="col-xs-offset-1">
-                            Best Measure: <span style="padding-left: 5px;">5 m (TEM Imaging)</span> <br>
-                            Measurements: <a ng-click="measurements()">link</a>
-                        </div>
-                    </div>
-                </li>
-                <li style="padding:10px;"><b>Area</b> :
-                    <div class="row">
-                        <div class="col-xs-offset-1">
-                            Best Measure: <span style="padding-left: 5px;">12 sq cm (TEM Imaging)</span> <br>
-                            Measurements: <a ng-click="measurements()">link</a>
-                        </div>
-                    </div>
-                </li>
-                <li style="padding:10px;"><b>Histogram</b> :
-                    <div class="row">
-                        <div class="col-xs-offset-1">
-                            Best Measure: <span style="padding-left: 5px;"><a href="" popover="Graph displayed here...."
-                                                                              popover-title="Particle size distribution"><i
-                                class="fa fa-fw fa-bar-chart"></i></a> </span> (SEM Imaging)<br>
-                            Measurements: <a ng-click="measurements()">link</a>
-                        </div>
-                    </div>
-                </li>
+                <!--<li style="padding:10px;"><b>Composition</b> :-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-offset-1">-->
+                            <!--Best Measure: <span style="padding-left: 5px;">Mg Al 5%  (SEM Imaging)</span>  <br>-->
+                            <!--Measurements: <a ng-click="measurements()">link</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<li style="padding:10px;"><b>Volume Fraction</b> :-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-offset-1">-->
+                            <!--Best Measure: <span style="padding-left: 5px;"> 44 Cubic cm (SEM Imaging)</span> <br>-->
+                            <!--Measurements: <a ng-click="measurements()">link</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<li style="padding:10px;"><b>Height</b> :-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-offset-1">-->
+                            <!--Best Measure: <span style="padding-left: 5px;">5 m (TEM Imaging)</span> <br>-->
+                            <!--Measurements: <a ng-click="measurements()">link</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<li style="padding:10px;"><b>Area</b> :-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-offset-1">-->
+                            <!--Best Measure: <span style="padding-left: 5px;">12 sq cm (TEM Imaging)</span> <br>-->
+                            <!--Measurements: <a ng-click="measurements()">link</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<li style="padding:10px;"><b>Histogram</b> :-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-offset-1">-->
+                            <!--Best Measure: <span style="padding-left: 5px;"><a href="" popover="Graph displayed here...."-->
+                                                                              <!--popover-title="Particle size distribution"><i-->
+                                <!--class="fa fa-fw fa-bar-chart"></i></a> </span> (SEM Imaging)<br>-->
+                            <!--Measurements: <a ng-click="measurements()">link</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
             </ul>
         </div>
         <div class="row">
