--- a/website/app/application/core/projects/project/samples/view-measurements.html
+++ b/website/app/application/core/projects/project/samples/view-measurements.html
@@ -3,69 +3,19 @@
         <h3 class="modal-title">Choose Best Measure for Composition</h3>
     </div>
     <div class="modal-body">
-        <div class="row">
+        <div class="row" ng-repeat="measure in modal.property.measurements">
             <div class="col-xs-1">
-                <input type="radio" ng-model="color" value="a1">
+                <input type="radio" ng-model="color" value="{{measure.value}}">
             </div>
             <div class="col-xs-2">
-                Mg+Al
+                {{measure.value}}  {{measure.unit}}
             </div>
             <div class="col-xs-2">
                 <img src="assets/img/splash/process-icon.png" style="height: 30px;padding-bottom: 10px;">
-                SEM Imaging
+                processabc
             </div>
 
         </div>
-
-        <div class="row">
-            <div class="col-xs-1">
-                <input type="radio" ng-model="color" value="a2">
-            </div>
-            <div class="col-xs-2">
-                Mg+Ar
-            </div>
-            <div class="col-xs-2">
-                <img src="assets/img/splash/process-icon.png" style="height: 30px;padding-bottom: 10px;">
-                SEM Imaging
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-1">
-                <input type="radio" ng-model="color" value="a3">
-            </div>
-            <div class="col-xs-2">
-                Ar+Zn
-            </div>
-            <div class="col-xs-2">
-                <img src="assets/img/splash/process-icon.png" style="height: 30px;padding-bottom: 10px;">
-                TEM Imaging
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-1">
-                <input type="radio" ng-model="color" value="a4">
-            </div>
-            <div class="col-xs-2">
-                Cu+Mg+Ar
-            </div>
-            <div class="col-xs-2">
-                <img src="assets/img/splash/process-icon.png" style="height: 30px;padding-bottom: 10px;">
-                SEM Imaging
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-1">
-                <input type="radio" ng-model="color" value="a5">
-            </div>
-            <div class="col-xs-2">
-                Zn+Mg
-            </div>
-            <div class="col-xs-2">
-                <img src="assets/img/splash/process-icon.png" style="height: 30px;padding-bottom: 10px;">
-                TEM Imaging
-            </div>
-        </div>
-
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" ng-click="ok()">OK</button>
