--- a/website/app/application/core/projects/project/samples/view-measurements.html
+++ b/website/app/application/core/projects/project/samples/view-measurements.html
@@ -1,20 +1,25 @@
 <div>
     <div class="modal-header">
-        <h3 class="modal-title">Choose Best Measure for Composition</h3>
+        <h3 class="modal-title">{{modal.property.name}}'s measured at different process scales</h3>
     </div>
     <div class="modal-body">
-        <div class="row" ng-repeat="measure in modal.property.measurements">
-            <div class="col-xs-1">
-                <input type="radio" ng-model="color" value="{{measure.value}}">
-            </div>
-            <div class="col-xs-2">
-                {{measure.value}}  {{measure.unit}}
-            </div>
-            <div class="col-xs-2">
-                <img src="assets/img/splash/process-icon.png" style="height: 30px;padding-bottom: 10px;">
-                processabc
-            </div>
+        Choose your best measure: <br><br>
 
+        <div class="row" ng-repeat="(key, values) in modal.property.measurements | groupBy: 'name'">
+            <b><img src="assets/img/splash/process-icon.png" style="height: 30px;padding-bottom: 10px;"> Process ::
+                {{key}}</b>
+
+            <div class="row" ng-repeat="measure in values">
+                <div class="col-xs-offset-1">
+                    <div class="col-xs-1">
+                        <input type="radio" ng-model="selected.item" ng-value="measure">
+                    </div>
+                    <div class="col-xs-2">
+                        <i>Value</i>: {{measure.value}}<br>
+                        <i>Unit </i>: {{measure.units}} <br>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
