--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -63,20 +63,8 @@
                                         <li ng-repeat="property in sample.new_properties">
                                             {{property.name}}
                                             <div ng-repeat="measure in property.measures">
-                                                <div ng-switch="measure._type">
-                                                    <div ng-switch-when="number">
-                                                        <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
-                                                    </div>
-                                                    <div ng-switch-when="string">
-                                                        <span style="padding-left: 30px;"> {{measure.value}}</span>
-                                                    </div>
-                                                    <div ng-switch-when="histogram">
-                                                        <a href="" popover="Graph displayed here...."
-                                                           popover-title="Particle size distribution">{{measure.name}}
-                                                            <i
-                                                                    class="fa fa-bar-chart"></i>
-                                                        </a>
-                                                    </div>
+                                                <div>
+                                                    <display-measurement measure="measure"></display-measurement>
                                                 </div>
                                             </div>
                                         </li>
@@ -89,8 +77,17 @@
                                                     <div ng-switch-when="number">
                                                         <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
                                                     </div>
+                                                    <div ng-switch-when="fraction">
+                                                        <span style="padding-left: 30px;">{{measure.value}} {{measure.unit}}</span>
+                                                    </div>
                                                     <div ng-switch-when="string">
                                                         <span style="padding-left: 30px;"> {{measure.value}}</span>
+                                                    </div>
+                                                    <div ng-switch-when="pair">
+                                                        <span style="padding-left: 30px;">
+                                                            {{measure.attribute1.value}} {{measure.attribute1.unit}} ::
+                                                            {{measure.attribute2.value}} {{measure.attribute2.unit}}
+                                                        </span>
                                                     </div>
                                                     <div ng-switch-when="histogram">
                                                         <a href="" popover="Graph displayed here...."
@@ -130,6 +127,7 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <b>Files</b>
+
                         <div class="row" ng-repeat="attachment in template.input_files">
                             <div ng-if="attachment.type === 'datafile'">
                                 <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
