--- a/website/app/application/core/projects/project/processes/edit.html
+++ b/website/app/application/core/projects/project/processes/edit.html
@@ -53,10 +53,10 @@
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
-                        <a ng-click="openFile(attachment)" class="link" style="padding-left: 15px;">{{attachment.datafile_id.name}}</a>
+                        <a ng-click="openFile(attachment)" class="link" style="padding-left: 15px;">{{attachment.name}}</a>
 
                         <p style="padding-left: 80px">
-                            <small class="text-muted">{{attachment.datafile_id.path}}</small>
+                            <small class="text-muted">{{attachment.path}}</small>
                         </p>
                     </div>
                 </div>
@@ -66,10 +66,10 @@
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
-                        <a ng-click="openFile(attachment)" class="link" style="padding-left: 15px;">{{attachment.datafile_id.name}}</a>
+                        <a ng-click="openFile(attachment)" class="link" style="padding-left: 15px;">{{attachment.name}}</a>
 
                         <p style="padding-left: 80px">
-                            <small class="text-muted">{{attachment.datafile_id.path}}</small>
+                            <small class="text-muted">{{attachment.path}}</small>
                         </p>
                     </div>
                 </div>
