--- a/website/app/index.html
+++ b/website/app/index.html
@@ -329,7 +329,7 @@
 <script src="application/core/components/properties/properties.js"></script>
 <script src="application/services/project-task-bar-state-service.js"></script>
 <script src="application/core/projects/project/processes/transformation-controller.js"></script>
-
+<script src="application/core/components/properties/partials/display-measurement-directive.js"></script>
 <!-- endbuild -->
 </body>
 </html>
