--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -9,6 +9,7 @@
                 <span class="pull-right">
                     <i style="color:red;" class="fa fa-asterisk"></i> :: Denotes current process measurements
                 </span>
+
                 <div class="col-xs-12">
                     <div class="row"><b>Name: </b>{{modal.item.name}} <br></div>
                     <div class="row"><b>Owner:</b> {{modal.item.owner}} <br></div>
@@ -23,13 +24,15 @@
                         <b>{{property.name}}</b> :
                         <div class="row">
                             <div class="col-xs-offset-1">
-                                Best Measure: <span ng-if="property.best_measure.length !== 0" style="padding-left: 5px;">
-                                    {{property.best_measure[0].value}}  {{property.best_measure[0].units}}</span>  <br>
+                                Best Measure: <span ng-if="property.best_measure.length !== 0"
+                                                    style="padding-left: 5px;">
+                                    {{property.best_measure[0].value}}  {{property.best_measure[0].units}}</span> <br>
                                 Measurements:
                                 <ul>
                                     <li ng-repeat="measure in property.measurements">
                                         <div>
-                                            <display-measurement current-process="modal.item.process_id" measure="measure"></display-measurement>
+                                            <display-measurement current-process="modal.item.process_id"
+                                                                 measure="measure"></display-measurement>
                                         </div>
                                     </li>
                                 </ul>
@@ -40,11 +43,18 @@
             </div>
             <div class="row">
                 <div class="sample headings">Attachments</div>
-                <div class="row" ng-repeat="attachment in modal.item.attachments">
+                <div class="row" ng-repeat="file in modal.item.files">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
-                        <a class="link" style="padding-left: 15px;">{{attachment}}</a>
+                        <a class="link" style="padding-left: 15px;">{{file.name}}</a>
+
+                        <p style="padding-left: 80px">
+                            <small class="text-muted">{{file.birthtime | toDateString}} , {{file.owner}} , {{file.size}}
+                                kb
+                            </small>
+                        </p>
+
                     </div>
                 </div>
             </div>
