transformed samples and bug fixes

--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -12,7 +12,7 @@
 
                 <div class="col-xs-12">
                     <div class="row"><b>Name: </b>{{modal.item.name}} <br></div>
-                    <div class="row"><b>Owner:</b> {{modal.item.owner}} {{modal.item.property_set_id}}<br></div>
+                    <div class="row"><b>Owner:</b> {{modal.item.owner}}<br></div>
                     <div class="row"><b>Description: </b><br>
                         {{modal.item.description}}<br></div>
                 </div>
