--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -257,7 +257,7 @@
                                        ng-click="removeAttachment(attachment, 'input_files')"
                                        class="fa fa-fw fa-close pull-right pointer"></i>
 
-                                    <span style="padding-left: 20px">
+                                    <span ng-if="" style="padding-left: 20px">
                                       <i class="fa fa-link fa-fw sample"></i>
                                         <span><a class="sample"
                                                  ng-click="link = !link">Link Sample</a>
